--- a/game.html
+++ b/game.html
@@ -11,6 +11,10 @@
       border: 1px solid black
     }
   </style>
+  <script src="guagame.js"></script>
+  <script src="ball.js"></script>
+  <script src="paddle.js"></script>
+  <script src="block.js"></script>
 </head>
 
 <body>
@@ -25,77 +29,6 @@
     return img
   }
 
-  var Paddle = function () {
-    var image = imageFromPath('paddle.png')
-    var o = {
-      image: image,
-      x: 100,
-      y: 250,
-      speed: 15,
-      move: function (x) {
-        if(x <0) {
-          x = 0
-        }
-        if(x > 400 - this.image.width) {
-          x = 400 - this.image.width
-        }
-        this.x = x
-      },
-      moveLeft: function () {
-        this.move(this.x - this.speed)
-      },
-      moveRight: function () {
-        this.move(this.x + this.speed)
-      },
-      collide: function (ball) {
-        if (ball.y + ball.height > o.y) {
-          if (ball.x > o.x && ball.x < o.x + o.image.width) {
-            // log('true')
-            return true
-          }
-        }
-        return false
-      },
-    }
-    return o
-  }
-
-  var Ball = function () {
-    var image = imageFromPath('ball.png')
-    image.onload = function () {
-      o.width = this.width
-      o.height = this.height
-    }
-    var o = {
-      image: image,
-      x: 100,
-      y: 200,
-      speedX: 5,
-      speedY: 5,
-      fired: false,
-      fire: function () {
-        this.fired = true
-      },
-      move: function () {
-        if (this.fired) {
-          if (this.x < 0 || this.x + this.width > 400) {
-            this.speedX = -this.speedX
-          }
-          if (this.y < 0 || this.y + this.height > 300) {
-            this.speedY = -this.speedY
-          }
-
-          this.x += this.speedX
-          this.y += this.speedY
-        }
-      },
-      revert: function () {
-        this.speedY *= -1
-      },
-    }
-    return o
-  }
-
   var rectIntersects = function (a, b) {
     var o = a
     if (b.y > o.y && b.y < o.y + o.image.height) {
@@ -106,76 +39,9 @@
     return false
   }
 
-  var Block = function () {
-    var image = imageFromPath('block.png')
-    image.onload = function () {
-      o.w = this.width
-      o.h = this.height
-    }
-    var o = {
-      image: image,
-      x: 100,
-      y: 100,
-      alive: true,
-      kill: function () {
-        o.alive = false
-      },
-      collide: function (b) {
-        return this.alive && (rectIntersects(o, b) || rectIntersects(b, o));
-      },
-    }
-    return o
-  }
-
-  var Game = function () {
-    var g = {
-      actions: {},
-      keydowns: {},
-    }
-    var canvas = document.querySelector('#id-canvas')
-    var context = canvas.getContext('2d')
-    g.canvas = canvas
-    g.context = context
-    g.drawImage = function (gameImage) {
-      g.context.drawImage(gameImage.image, gameImage.x, gameImage.y)
-    }
-    //events
-    window.addEventListener('keydown', function (event) {
-      g.keydowns[event.key] = true
-    })
-
-    window.addEventListener('keyup', function (event) {
-      g.keydowns[event.key] = false
-    })
-    //register
-    g.registerAction = function (key, callback) {
-      g.actions[key] = callback
-    }
-    //timer
-    setInterval(function () {
-      //events
-      for (let key in g.actions) {
-        if (g.keydowns[key]) {
-          g.actions[key]()
-        }
-      }
-
-      //update
-      g.update()
-
-      //clear
-      g.context.clearRect(0, 0, canvas.width, canvas.height)
-
-      //draw
-      g.draw()
-    }, 1000 / fps)
-
-    return g
-  }
-
   var __main = function () {
     var paused = false
-    var game = Game()
+    var game = Game(fps)
     var paddle = Paddle();
     var ball = Ball();
     var blocks = [];
