--- a/game.html
+++ b/game.html
@@ -11,34 +11,18 @@
       border: 1px solid black
     }
   </style>
+  <script src="utils.js"></script>
   <script src="guagame.js"></script>
   <script src="ball.js"></script>
   <script src="paddle.js"></script>
   <script src="block.js"></script>
+  <script src="level.js"></script>
 </head>
 
 <body>
 <canvas id="id-canvas" width="400" height="300"></canvas>
 
 <script>
-  var log = console.log.bind(this)
-  var fps = 60;
-  var imageFromPath = function (path) {
-    var img = new Image()
-    img.src = path
-    return img
-  }
-
-  var rectIntersects = function (a, b) {
-    var o = a
-    if (b.y > o.y && b.y < o.y + o.image.height) {
-      if (b.x > o.x && b.x < o.x + o.image.width) {
-        return true
-      }
-    }
-    return false
-  }
-
   var __main = function () {
     var paused = false
     var game = Game(fps)
