--- a/game.html
+++ b/game.html
@@ -23,18 +23,27 @@
 <canvas id="id-canvas" width="400" height="300"></canvas>
 
 <script>
+
+  var loadLevel = function (n) {
+    var blocks = [];
+    n = n - 1
+    var level = levels[n];
+    for (var i = 0; i < level.length; i++) {
+      var p = level[i]
+      var b = Block(p)
+      blocks.push(b)
+    }
+    return blocks
+  }
   var __main = function () {
     var paused = false
+
     var game = Game(fps)
+
     var paddle = Paddle();
     var ball = Ball();
     var blocks = [];
-    for (var i = 0; i < 3; i++) {
-      var b = Block()
-      b.x = i*100
-      b.y = 50
-      blocks.push(b)
-    }
+    blocks = loadLevel(1)
 
     game.registerAction('a', function () {
       paddle.moveLeft()
@@ -46,13 +55,17 @@
       ball.fire()
     })
     window.addEventListener('keydown', function (e) {
-      if(e.key === 'p'){
+      if (e.key === 'p') {
         paused = !paused
+      }else if(e.key === '1'){
+        blocks = loadLevel(1)
+      }else if(e.key === '2'){
+        blocks = loadLevel(2)
       }
     })
 
     game.update = function () {
-      if(paused) {
+      if (paused) {
         return
       }
       ball.move()
