--- a/game.html
+++ b/game.html
@@ -21,13 +21,15 @@
 
 <body>
 <canvas id="id-canvas" width="400" height="300"></canvas>
+<hr>
+<input type="range" name="" value="1" id="id-input-speed">
 
 <script>
-
+  var blocks = [];
   var loadLevel = function (n) {
-    var blocks = [];
     n = n - 1
     var level = levels[n];
+    var blocks = []
     for (var i = 0; i < level.length; i++) {
       var p = level[i]
       var b = Block(p)
@@ -35,16 +37,40 @@
     }
     return blocks
   }
+
+  var enableDebugMode = function (enable) {
+    if (!enable) {
+      return
+    }
+    window.paused = false
+    window.addEventListener('keydown', function (event) {
+      var k = event.key
+      if (k == 'p') {
+        // 暂停功能
+        window.paused = !window.paused
+      } else if ('1234567'.includes(k)) {
+        // 为了 debug 临时加的载入关卡功能
+        blocks = loadLevel(Number(k))
+      }
+    })
+
+    document.querySelector('#id-input-speed').addEventListener('input', (e) => {
+      var input = e.target
+      // log(input.value)
+      window.fps = Number(input.value/100 * 60) || 1
+    });
+  }
+
   var __main = function () {
+    enableDebugMode(true)
     var paused = false
 
     var game = Game(fps)
 
     var paddle = Paddle();
     var ball = Ball();
-    var blocks = [];
-    blocks = loadLevel(1)
 
+    blocks = loadLevel(1)
     game.registerAction('a', function () {
       paddle.moveLeft()
     })
@@ -54,18 +80,9 @@
     game.registerAction('f', function () {
       ball.fire()
     })
-    window.addEventListener('keydown', function (e) {
-      if (e.key === 'p') {
-        paused = !paused
-      }else if(e.key === '1'){
-        blocks = loadLevel(1)
-      }else if(e.key === '2'){
-        blocks = loadLevel(2)
-      }
-    })
 
     game.update = function () {
-      if (paused) {
+      if (window.paused) {
         return
       }
       ball.move()
@@ -78,8 +95,8 @@
       blocks.forEach(block => {
         if (block.collide(ball)) {
           // log('collide')
-          ball.revert()
           block.kill()
+          ball.revert()
         }
       })
 
