--- a/game.html
+++ b/game.html
@@ -65,7 +65,7 @@
     enableDebugMode(true)
     var paused = false
 
-    var game = Game(fps)
+    var game = Game()
 
     var paddle = Paddle();
     var ball = Ball();
