--- a/game.html
+++ b/game.html
@@ -23,98 +23,10 @@
 <canvas id="id-canvas" width="400" height="300"></canvas>
 <hr>
 <input type="range" name="" value="1" id="id-input-speed">
-
-<script>
-  var blocks = [];
-  var loadLevel = function (n) {
-    n = n - 1
-    var level = levels[n];
-    var blocks = []
-    for (var i = 0; i < level.length; i++) {
-      var p = level[i]
-      var b = Block(p)
-      blocks.push(b)
-    }
-    return blocks
-  }
-
-  var enableDebugMode = function (enable) {
-    if (!enable) {
-      return
-    }
-    window.paused = false
-    window.addEventListener('keydown', function (event) {
-      var k = event.key
-      if (k == 'p') {
-        // 暂停功能
-        window.paused = !window.paused
-      } else if ('1234567'.includes(k)) {
-        // 为了 debug 临时加的载入关卡功能
-        blocks = loadLevel(Number(k))
-      }
-    })
-
-    document.querySelector('#id-input-speed').addEventListener('input', (e) => {
-      var input = e.target
-      // log(input.value)
-      window.fps = Number(input.value/100 * 60) || 1
-    });
-  }
-
-  var __main = function () {
-    enableDebugMode(true)
-    var paused = false
-
-    var game = Game()
-
-    var paddle = Paddle();
-    var ball = Ball();
-
-    blocks = loadLevel(1)
-    game.registerAction('a', function () {
-      paddle.moveLeft()
-    })
-    game.registerAction('d', function () {
-      paddle.moveRight()
-    })
-    game.registerAction('f', function () {
-      ball.fire()
-    })
-
-    game.update = function () {
-      if (window.paused) {
-        return
-      }
-      ball.move()
-      //判断paddle相撞
-      if (paddle.collide(ball)) {
-        ball.revert()
-      }
-
-      //判断blocks相撞
-      blocks.forEach(block => {
-        if (block.collide(ball)) {
-          // log('collide')
-          block.kill()
-          ball.revert()
-        }
-      })
-
-    }
-
-    game.draw = function () {
-      game.drawImage(paddle)
-      game.drawImage(ball)
-      blocks.forEach(block => {
-        if (block.alive) {
-          game.drawImage(block)
-        }
-      })
-    }
-  }
-
-  __main()
-</script>
+<div>
+  <textarea name="id-text-log" id="id-text-log" cols="60" rows="20"></textarea>
+</div>
+<script src="main.js"></script>
 </body>
 
 </html>
