--- a/game.html
+++ b/game.html
@@ -17,6 +17,8 @@
   <script src="paddle.js"></script>
   <script src="block.js"></script>
   <script src="level.js"></script>
+  <script src="scene.js"></script>
+  <script src="endScene.js"></script>
 </head>
 
 <body>
