--- a/game.html
+++ b/game.html
@@ -11,14 +11,16 @@
       border: 1px solid black
     }
   </style>
-  <script src="utils.js"></script>
-  <script src="guagame.js"></script>
-  <script src="ball.js"></script>
-  <script src="paddle.js"></script>
-  <script src="block.js"></script>
+  <script src="guagame/utils.js"></script>
+  <script src="guagame/guagame.js"></script>
+  <script src="guagame/gua_scene.js"></script>
+  <script src="scene/main/ball.js"></script>
+  <script src="scene/main/paddle.js"></script>
+  <script src="scene/main/block.js"></script>
   <script src="level.js"></script>
-  <script src="scene.js"></script>
-  <script src="endScene.js"></script>
+  <script src="scene/main/scene.js"></script>
+  <script src="scene/end/scene_end.js"></script>
+  <script src="scene/title/scene_title.js"></script>
 </head>
 
 <body>
